@@ -1,0 +1,31 @@
+<?xml version="1.0" encoding="utf-8"?>
+<Product xmlns='http://code.google.com/p/open-zwave/'>
+<!-- 
+Popp 012501 Strike Lock Control 
+http://www.popp.eu/wp-content/uploads/2016/11/Manual_ElectricStrikeLockControl_POPP_en.pdf
+-->
+	<!-- Configuration  -->
+	<CommandClass id="112">
+		<Value type="byte" genre="config" instance="1" index="0" label="Automatically switch off after" size="1" min="0" max="127" units="seconds" value="3">
+			<Help>
+			0: No automated close after command open.
+			1 - 127: Close again after x seconds (Default 3)
+			</Help>
+		</Value>
+		<Value type="byte" genre="config" instance="1" index="1" label="Value of Off-Command" size="1" min="0" max="99" value="0">
+			<Help>0 - 99 (Default 0)</Help>
+		</Value>
+		<Value type="byte" genre="config" instance="1" index="2" label="Value of On-Command" size="1" min="0" max="99" value="99">
+			<Help>0 - 99 (Default 99)</Help>
+		</Value>
+	</CommandClass>
+	<!-- Association Groups -->	
+	<CommandClass id="133">
+		<Associations num_groups="2">
+			<Group index="1" max_associations="10" label="Lifeline" />
+			<Group index="2" max_associations="10" label="Action on External Dry Input" />
+		</Associations>
+	</CommandClass>
+
+</Product>
+
